@@ -7,24 +7,24 @@ DIST stgit-0.16-missing-patches.tar.gz 1667 SHA256 f105bb417592be3c68d830ad1cf2e
 DIST stgit-0.16.tar.gz 362687 SHA256 02f1a19350ccf4a26abac1421df8c2d021e78f995c913f9562718a1700318a42 SHA512 782de3d5855aad4f5d040478745990517ebe2b26dc315a3ed41db95399bb46e075d63a70baa0e3aa2ab1012b59e6ad1f5940a904f296ef09d6bca60f66e417dd WHIRLPOOL e2334c041cb260455d549d33b6628fd4f6e1e7da850f2987ba86922504e07aed8177d092550348b52cad8894b0335d20ee1608b855fa1cb6545bdd301a9d38f1
 DIST stgit-0.17.1-upstream-patches-0.tar.xz 5064 SHA256 6e120dd85bcdcbbb64bea98bd5967bb1f01fbc9d3e80b4856d7e328cfcafc31e SHA512 da7b75898466c8be58c48a86aee6209a907f971c7b15b38034940598d353fa6ecb48894b220fbfd8e032e88e746b377c55485c8045c330607e122a082aa0374f WHIRLPOOL aa7b7a5f89703eb35fab26dec0bcf5ceae2e20608b2562c7b6f76e33d43b35113d97282cb6b5f4cdf5da6e11e07faacacb13215cef3f7dac31a862ff809641cb
 DIST stgit-0.17.1.tar.gz 398466 SHA256 d43365a0c22e41a6fb9ba1a86de164d6475e79054e7f33805d6a829eb4056ade SHA512 3efdfb9bc024c3a7c0d74d49e85f157d5d5209c9a2ad0ce63a07138c02fb1580e92ac4a91796e79bbd221e6884317e975f9f44e35db0b484fd916bc67cd61abe WHIRLPOOL a7c4c83cfeace12ced60e846ed9daaffadea3ed201a90e72239e3f8df310164e00ce5a89174df177f89df4a609a66ac35e905f31419ed654081c3ab0c2cba859
-EBUILD stgit-0.16-r2.ebuild 1839 SHA256 c384775ff10b3156a5b86dc21940fd42e1a1baa94712622ae0025cb89f5d508a SHA512 5f5bfcbb5855f9b442c22dc4a57376ffc507905f2ad422c3ad1e87c4aa6aca7046575e5111816dbe035df95b3a1ddb650e67cad1848d3eed216e29f8e9178868 WHIRLPOOL 71cb7f12eedc8684b0c9b73772f6a649e4e1a8941a9e6844487e4081d4ff4c9c09dfdc4d8a6b68aa5d36395426c4795a59927074f170e81263e5ed6ceced666b
-EBUILD stgit-0.17.1-r1.ebuild 2004 SHA256 7dc4179e5a40b5ac66654c2221e32a7656b41f4f2b98bfd7d2c9398e64a0dac1 SHA512 6dcc8873935047007ed077ee77d52f843b30fa7d35f46c7678db9a2349679b1066bb827bbb8b9ff58f982db13108ecfabbaf7d588203e23aff6042df707bd870 WHIRLPOOL 600ba35dd4c34d6eddb6db629dbcf866203b2bfdcf2c9ba3f737b63546d2ed15bd20514f0fe4c33252c70c1969b93bea5131d9cae7fe396e053189662743b0c4
-MISC ChangeLog 8757 SHA256 868584092f2f2b0af9dff23f7fd5c0caabee7b6a259ef3d65a371faa0103b3f0 SHA512 f6396194fc57fd99045b6c4386a26f8bce28331609f9bac70f7dc67736d90ccbd346a92b748be3279660cd0fe3dc501e80c85646473ca8f6207909eef13968c8 WHIRLPOOL 5388505984422fe4db6d8e6abfbceffebd2905525f96883f3a1d0dac34dc6b34b8b2480fe00526db70bbaf176b6b05e7f54ba80957f1e57117c7ee48d39ecca0
+EBUILD stgit-0.16-r2.ebuild 1839 SHA256 f905e042bce620b3c25acbfec6208aa4cd3143e2e92db19db3ea53ad3672fdb6 SHA512 13ff3c0d16e539edb606b4f83934b7f5c18f3396100d4f6534106e1bdbcfe82476e912c6d73f78ac83e403dcf8d147d169f66a1e0c0bac3b324871a9a61bbc8b WHIRLPOOL 7c17d94521fe052d7df4fb29cd3a9f3b60ad7c15bf96be1702068fe3374227fcdb81c1a72406b0d11c1044aaee0e7925585a7e713e230a7408a4df9209317804
+EBUILD stgit-0.17.1-r1.ebuild 2004 SHA256 2b12d76c41a22258fe9ac4726435a4cd1b585ca98db2613b51f019bd396bb836 SHA512 57e86535bcc8ce6ff3a0b0452f4fd0e190ddb7cf92fe57d157e9d3e8dc64afcad2345ff32810229a22d8017d432c0b4d3ce2680e6239fed974d9ef4c09c0ffed WHIRLPOOL ca8a22e971a587d39adfaa5913849a8bf258215487ada5aea75104293fcfcbe389faf8cd81901887f4c999bbda090f026668580b742f68bd8ca35b34856672e3
+MISC ChangeLog 8891 SHA256 7b063e811cbefbcee81fd350e012a1ab49220f7d47c595264506c333d15b0ac8 SHA512 d8212efdffa2457d368cf91a618c89f00a6805ac44fd846d863de44530547c8ba863f965045bc42a29b5f33d02c5bf338c029006086561c5b5f26b28cf54e817 WHIRLPOOL b55d97a0fc652af877435228f6562de729a2d562937541477861535d3a9cb6e4b360c1e9dfe403e4033dd30a8fdf5436bcb2d37e4f6db030c294b9bce9e16216
 MISC metadata.xml 556 SHA256 90b84b0c6017b201e862052e61ce1bacc58871eb55d4e45d3368e0c3447fa625 SHA512 ca397d3ffd1543512d5cea4a7a43f264d8885962911624bb78f7292af12932325cbe223a8fc7d430cf80f692d5c23f725133f3a85b96c5bc14ab71bb9edef386 WHIRLPOOL 2556b468d8fafcaa81bd4f08c1fd219af7572ef5d82edcb1b4357b0a59aa4cc55535bd4b432a88ce5933f3899bef45ba7b2d87e6da299211e63c0738c3f7a077
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT3kZFAAoJEJIMDbyqvv1VMRAQALfK9hmAGj+j7Bd+Jzxqo+xz
-KkhFZ/HhtU/MHG8vE9UGF3H9SYsgpSz8i3mqcHBQcJzj1k19YI3RtybFhxs4nVaF
-iEHESDQg8QWqMd1kev2h1SWhZT7vfQvULiw4MYZwaCK+pMKMCFcHeezaA+t+4Xpb
-o2l0vgKO8fiuwYkCFoC6a3PdTGt18QqJird56VtjZP4fIK5nc7mq8qYy5Ver4xJx
-EhZQkcMa/dS8FVass3K2wJGBo6TjlJdM3sSp9+Qzmjyc43VePV2+90QdiGPKYJOq
-IaUzERFIdAgMa0jcuAbrRb2b+GgLDTWgYb4onnSpMBLO+brLJbFD1xvzNq3lvwg4
-goxKxokiz1koFaWaOODKrvLBgQ1/zlTNfudUas+lLkMWrLmNThTQneJnUj0PTUyD
-hA+zlx24hwA3A8Bvp9p6e/CE5c1B6VEBGA8B38oMcK2K7RT/EDwofWjZWNU0trGl
-5Chxkh3Zcr3AarLw7jJefRUqSt9cz6p0jqYmGiD8L3XX5/q4pFyMFUMJzQ3CdBKj
-ksp3jiaieIkd/Lpph41RNDeBFfKw8pdZRqeNt0MI4uSmhw4ni2imHy8F1Me4VWy6
-puzKo2+QBsAL5TmdfMskCpLSxe8C47EWBiis0roiTC0lxJqan8/34l6mdhXwlIQN
-jGs+gCZVNF8IMmAZcnRl
-=1oAI
+iQIcBAEBCAAGBQJUR78GAAoJEJIMDbyqvv1VvAgQAM8IQ0zwWD+Qt+ByihFSI6du
+x10764g8NRFG4dpES7zn6HiBqIic/ulka3eWFPIzumcuy/GQ+aHCJik8bEF4D9WE
+7Cl3gdK2bA1uaI3eilNOI6ubKlRJ20uVMnxwjfQ7yujlY3XLtSQ5IBiakVhji1bo
+Mf2FsZYqG/0d8UXIR3KQw7p1GUUUnfm+U43iVyE22i+pykzrMk+JoaXnIjya81QE
+/M4sIHbfgLa/bpq2eWqPlmYcxeBP6WZ62BzI7NBJ4LNvlb+naU2cUvIJnDMfu9bA
+VpCWBB2GQ+9wt3ykRMnFhl/yRPeM1GVmRtId0wBbBKyv8Fzji53unGOiY7x2m6SP
+y1dDFhIHiMYpzVWsTgT5jMzQoi35+BjS5UGM3YOyCGu1waH578xBgrYvYSfSwZQ4
+uLuq0dzrbs9dXYPqsMzbVp0LkVvdnlfxnIcgl/0sRADU7U3GM4+LxUeMYaB95s6D
+8kx0pZ+876ZMyvWnGJ0XN8e81eG9VziaRMfQq5pFhg/FpiMgikiD2WOz4Q9hwU8e
+7Ru5aaxmA/NJQQ/IIhhYTzZ2ucxnvGUL4oQ2m5t0P9MMr/BVQlUF/BicxzI3ntW+
+d1pRYXwIvBPXDhJfxHLzGy66OWD5KuyB4WqecdZX4UsaTsIbmOzYgFD62Pg0GV6N
+a3nbXwAs37izst/UXp31
+=53tJ
 -----END PGP SIGNATURE-----
