@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/stgit/stgit-0.16-r2.ebuild,v 1.7 2014/08/03 14:27:38 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/stgit/stgit-0.16-r2.ebuild,v 1.8 2014/10/22 14:28:10 dlan Exp $
 
 EAPI="5"
 
@@ -73,5 +73,5 @@ python_install_all() {
 
 	distutils-r1_python_install_all
 
-	newbashcomp stgit-completion.bash ${PN}
+	newbashcomp stgit-completion.bash 'stg'
 }
